setup a Controller bases

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/OppProject?createDatabaseIfNotExist=true
     username: root
-    password: Qzdsqzds123@
+    password: 
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -22,4 +22,5 @@ spring:
   # MongoDB Configuration
   data:
     mongodb:
-      uri: mongodb://localhost:27017/mydatabase  # MongoDB URI
+      uri: mongodb://localhost:27017/NGResearch  # MongoDB URI
+
