--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  port: 65432
+  port: 6543
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/OppProject?createDatabaseIfNotExist=true
     username: root
-    password: 
+    password: Qzdsqzds123@
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
