--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 	      <artifactId>mysql-connector-j</artifactId>
 	      <scope>runtime</scope>
 	    </dependency>
+            <!-- Spring Data MongoDB -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 	    
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
