--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignore the contributor-specific configuration
+/src\main\resources\application.yml
+/src\main\resources\application.properties
