--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src\main\resources\application.yml
+/src\main\resources\application.properties
 
 ### VS Code ###
 .vscode/
