--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+     <dependency>
+
+        <groupId>javax.servlet</groupId>
+
+        <artifactId>javax.servlet-api</artifactId>
+
+        <version>4.0.1</version>
+
+        <scope>provided</scope>
+
+    </dependency>
 		
 		<dependency>
 		      <groupId>org.projectlombok</groupId>
@@ -67,7 +78,12 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+		    <!-- Spring WebSocket Dependency -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
+
 
 		
 		<dependency>
@@ -90,13 +106,6 @@
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		</dependency>
-
-
-
-
-
-
-
 
 	</dependencies>
 
