--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.open-in-view=true
@@ -14,5 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/NGResearh
-spring.data.mongodb.database=NGResearh
+spring.data.mongodb.database=NGR_chat
+spring.data.mongodb.uri=mongodb://localhost:27017/NGR_chat
+
+spring.jackson.object-mapper=customObjectMapper
