--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
 		    <artifactId>jackson-databind</artifactId>
 		</dependency>
 
+  <!-- dep for quick refresh -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
 	</dependencies>
 
   <build>
