adding the mailing service ,creating a new proposition , and start working on the proposition approavemnt and the resources entities

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
+    <!-- Spring Security WebSocket Dependency -->
+
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+  </dependency>
+
 
 
 		
