--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,14 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/NGResearh
       database: NGResearh
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: votre_email@gmail.com
+    password: votre_mot_de_passe
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
