creating admin chat group with project creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.open-in-view=true
@@ -18,3 +18,10 @@ spring.data.mongodb.database=NGR_chat
 spring.data.mongodb.uri=mongodb://localhost:27017/NGR_chat
 
 spring.jackson.object-mapper=customObjectMapper
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=votre_email@gmail.com
+spring.mail.password=votre_mot_de_passe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
