on proposition approuvement: the groups and chat groups of admins and members created with the creator as first member, on create proposition: email template are done,  email notification sent succefully to all admin accounts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jackson.object-mapper=customObjectMapper
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=votre_email@gmail.com
-spring.mail.password=votre_mot_de_passe
+spring.mail.username=researchnextgeneration@gmail.com
+spring.mail.password=tvuk lfbt pmdo vcgk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
