commit before pull

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,20 @@
       <scope>runtime</scope>
     </dependency>
 
+
+    <!-- test dependencies -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.7.0</version> <!-- Or the latest version -->
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
+    </dependency>
 	</dependencies>
 
   <build>
