--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=6541
 
-spring.datasource.url=jdbc:mysql://localhost:3307/ngrr?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ngr
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
