commit before pulling

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ build/
 /src\main\resources\application.yml
 /src\main\resources\application.properties
 
+application.properties
+application.yml
+
 ### VS Code ###
 .vscode/
 
