--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=6541
 
-spring.datasource.url=jdbc:mysql://localhost:3307/ngrr?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ngr
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.open-in-view=true
@@ -25,3 +25,7 @@ spring.mail.username=researchnextgeneration@gmail.com
 spring.mail.password=tvuk lfbt pmdo vcgk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=60MB
+spring.servlet.multipart.max-request-size=60MB
